--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,8 @@
-
+*body{
+    margin: 0;
+    padding: 0;
+    height: auto;
+}
 .open-sans-normal{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -7,6 +11,9 @@
 }
 
 /* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,12 +31,26 @@
     color: white;
 }
 
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575; 
+}
+
+.text-center{
+    text-align: center;
+}
+
 /* header */
 .header{
     background-image: url('../images/developer.png'),url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
-    
 }
 
 
@@ -87,4 +108,48 @@ nav ul li a{
 .banner-profile-picture{
     width: 580px;
 
+}
+
+/* main style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px
+}
+
+/* about-styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+   
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around; 
+    padding-top: 100px;
+}
+
+.item-description{
+    font-weight: 600;
+    
+    
+}
+
+/* skills section */
+
+.skills-container{
+    display: flex;
+    
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
